toggle btn and some fix padding and letter spacing

--- a/less/header.less
+++ b/less/header.less
@@ -1,3 +1,6 @@
+body {
+	max-width: 320px;
+}
 @import "variables.less";
 @import "fonts.less";
 @import "font-awesome.less";
@@ -5,43 +8,87 @@
 	margin: 0;
 	padding: 0;
 }
+.navbar {
+	border: 0;
+}
 .navbar-header,
 .navbar-default .navbar-collapse {
   background-color: #000033;
 }
-.navbar-default .navbar-collapse {
-	padding-right: 0;
-	padding-left: 0;
-  .navbar-nav {
-  	margin: 0;
-  }
 
-  li {
-  	border-top: 1px solid @navbar-default-border;
-  	text-align: center;
-  	font-size: 15px;
-  	&:first-child {
-  		border-top: none;
-  	}
-  	&.basket {
-  		background-color: #131d26;
-  		a {
-  			font-size: 14px;
-	  		color: #a2adb9;
-		  	.cart {
-		  		color: #fff;
-		  		font-size: 30px;
-		    	margin-top: -8px;
-		  	}
+.navbar-default {
+	.navbar-toggle {
+		&, &:hover, &:focus{
+			margin-top: 0;
+			margin-bottom: 0;
+			padding: 11px;
+			padding-bottom: 10px;
+			background-color: #fe924a;
+			margin-right: 0;
+			border: 0;
+			border-radius: 0;
+			.icon-bar {
+				width: 30px;
+				height: 5px;
+				background-color: #fff;
+				margin: 6px 0;
+			}
+			&.collapsed {
+				background-color: #fff1cf;
+			}
+		}
+	}
+	.navbar-collapse {
+		padding-right: 0;
+		padding-left: 0;
+		border: none;
+	  .navbar-nav {
+	  	margin: 0;
+	  }
+
+	  li {
+	  	border-top: 1px solid @navbar-default-border;
+	  	text-align: center;
+	  	font-size: 15px;
+	  	a {
+	  		letter-spacing: 0.7px;
+	  		padding-top: 11px;
+    		padding-bottom: 8px;
 	  	}
+	  	&:nth-child(2) {
+	  		border-top: none;
+	  	}
+	  	&.basket {
+	  		border: none;
+	  		background-color: #131d26;
+	  		a {
+	  			font-size: 14px;
+		  		color: #a2adb9;
+		  		padding-right: 19px;
+		  		padding-top: 16px;
+		  		padding-bottom: 16px;
+		  		margin-left: -22px;
+			  	.cart {
+			  		color: #fff;
+			  		font-size: 30px;
+			    	margin-top: -8px;
+			  	}
+		  	}
+		  }
+		  &.phone {
+		  	font-family: 'Times New Roman', sans-serif;
+		  	color: #cccccc;
+		  	font-size: 16px;
+		  	padding: 14px 0;
+	    	line-height: 29px;
+	    	letter-spacing: 0;
+		  }
+		  .social {
+		  	margin-top: 13px;
+		  	img {
+		  		padding: 5px 24px;
+		  	}
+		  }
 	  }
-	  &.phone {
-	  	font-family: 'Times New Roman', sans-serif;
-	  	color: #cccccc;
-	  	font-size: 16px;
-	  	padding: 13px 0;
-    	line-height: 29px;
-	  }
-  }
+	}
 }
-
